    40% speed up. (PR #930)
  * The ProgressMeter class now has a `dynamic` keyword argument. It is now
    recommended to provide format strings using the new python format syntax,
    the old %-based syntax is still available but will be deprecated.
    (PR #944)
  * Analysis.rms.RMSD now confirms to standard analysis API (Issue #893)

Deprecations (Issue #599)
  * Use of rms_fit_trj deprecated in favor of AlignTraj class (Issue #845)
  * Moved analysis.x3dna to the analysis.legacy module (Issue #906)
        
05/15/16 jandom, abhinavgupta94, orbeckst, kain88-de, hainm, jbarnoud,
         dotsdl, richardjgowers, BartBruininks, jdetle

  * 0.15.0

Metadata

  * link download_url to GitHub releases so that Depsy recognizes
    contributors (issue #749)
  * a __version__ variable is now exposed; it is built by setup.py from the
    AUTHORS file (Issue #784)

API Changes

  * rmsd doesn't superimpose by default anymore. The superposition
    is controlled by the 'superposition' keyword now. (see issue #562, #822)

Enhancements

  * Add conda build scripts (Issue #608)
  * Added read-only property giving Universe init kwargs (Issue #292)
  * Added 'crdbox' as AMBER Trj format extension (Issue #846)
  * Iteration and seeking in PDB files made faster (Issue #848)

Fixes
  * ENT file format added to PDB Readers/Writers/Parsers (Issue #834)
  * rmsd now returns proper value when given array of weights (Issue #814)
  * change_release now finds number and dev (Issue #776)
  * units.py now correctly prints errors for unknown units.
  * test_shear_from_matrix doesn't fail for MKL builds anymore (Issue #757)
  * HEADER and TITLE now appear just once in the PDB. (Issue #741) (PR #761)
  * MOL2 files without substructure section can now be read (Issue #816)
  * MOL2 files can be written without substructure section (Issue #816)
  * GRO files with an incomplete set of velocities can now be read (Issue #820)